--- a/app/views/lottery_tickets/two_color_rates.html.slim
+++ b/app/views/lottery_tickets/two_color_rates.html.slim
@@ -2,7 +2,7 @@
   table
     thead
       tr
-        th colspan="2" 大乐透 红球中奖几率
+        th colspan="2" 双色球 红球中奖几率
     tbody
       - @red_ball_rates.each do |item|
         tr
@@ -12,7 +12,7 @@
   table
     thead
       tr
-        th colspan="2" 大乐透 篮球球中奖几率
+        th colspan="2" 双色球 篮球球中奖几率
     tbody
       - @blue_ball_rates.each do |item|
         tr
